# DM2022-2023-Projects

./: requirements.txt
1-Classification/: DatasetPreprocessor.py  RowIDs.txt  classification.py  main.py  notes.md
2-Recommendations/: Apriori.py  AprioriFix.py  AprioriOptimized.py  AprioriPruning.py  AprioriTest.py  AssociationRules.py  CompareAssociationRules.py  DataProcessor.py  DatasetGenerator.py  NDI.py  Profiler.py  Recommendations.py  main.py  utils.py
2-Recommendations/NonDerivableItemsets/: Converter.cpp
2-Recommendations/NonDerivableItemsets/bf/: data.cpp  item.h  ndi.h  qie.cpp
2-Recommendations/NonDerivableItemsets/df/: qie.cpp
Retake/FrequentPatternMining/: Apriori.py  AprioriOptimized.py  AssociationRules.py  Dataset.py  EvaluateRecommendations.py  NDI.py  Recommendations.py  Transactions.py  main.py
Retake/FrequentPatternMining/ndi/: CMakeLists.txt
Retake/FrequentPatternMining/ndi/bf/: data.h  item.cpp  ndi.cpp  nditest.cpp
